<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Sign_Up_Activity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/signup"
            android:maxWidth="250dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pgh_signUpemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FF0000"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="20" />

        <EditText
            android:id="@+id/et_pgh_signUpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#FF0000"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20" />

        <Button
            android:id="@+id/bt_pgh_createAccountBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/kobold"
            android:padding="10dp"
            android:text="@string/createAccount"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:backgroundTint="@color/point" />

        <TextView
            android:id="@+id/tv_pgh_LoginMoveTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kobold"
            android:gravity="center"
            android:text="@string/Already" />
    </LinearLayout>

</LinearLayout>