<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_style"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ask_accident"
            android:textColor="@color/point"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbtn_knh_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:button="@drawable/radiobtn_style"
                android:text="@string/content_car"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rbtn_knh_op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:button="@drawable/radiobtn_style"
                android:text="@string/editor_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_knh_custominfo"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:backgroundTint="@color/point"
                android:ems="10"
                android:hint="@string/editor_body"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100">

        <Button
            android:id="@+id/btn_knh_Cancle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:onClick="onClick"
            android:text="@string/cancle_btn"
            android:textColor="@color/point"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_knh_Confirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:shadowColor="#000000"
            android:text="@string/ok_BTN"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="onClick"
            android:textStyle="bold"
            app:backgroundTint="@color/point" />

    </LinearLayout>


</LinearLayout>