<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_knh_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/history"
            android:maxHeight="25dp"
            android:onClick="backClick"
            app:srcCompat="@drawable/back" /> />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/title_sub"
            android:textColor="@color/point"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_knh_accbtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="onClick"
                app:srcCompat="@drawable/car_accident" />

            <ImageView
                android:id="@+id/img_knh_accbtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="onClick"
                app:srcCompat="@drawable/fire" />

            <ImageView
                android:id="@+id/img_knh_accbtn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                app:srcCompat="@drawable/construction" />

            <Button
                android:id="@+id/btn_knh_accbtn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_style"
                android:onClick="onClick"
                android:text="@string/etc"
                android:textColor="@color/point"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>